--- a/static/main.css
+++ b/static/main.css
@@ -1,3 +1,4 @@
+/* element selection */
 body {
     font-family: Arial, sans-serif;
     text-align: center;
@@ -10,3 +11,27 @@ h1 {
 p {
     color: #666;
 }
+
+/* class selection */
+
+.navbar {
+    padding: 20px 10px;
+    background-color: #195AFD;
+    height: 80px;
+    margin-bottom: 40px;
+}
+
+.nav-link, .navbar-brand {
+    color: #ffffff;
+}
+
+.navbar-brand {
+    font-size: 1.5rem;
+    padding-left: 100px;
+}
+
+.navbar-nav {
+    padding-right: 180px;
+}
+
+/* id selection */
