--- a/templates/header.html
+++ b/templates/header.html
@@ -26,7 +26,7 @@
                 <a class="nav-link" href="#">Portfolio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="/about">About</a>
               </li>
             </ul>
           </div>
