--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,6 @@
 {% extends "header.html" %}
 {% block content %}
-<body>
+<body id="about-main">
     <h1>About Us</h1>
     <div id="project-description">
         <p>Paragraph about us as SEO and EduMarket here</p>
