--- a/templates/header.html
+++ b/templates/header.html
@@ -20,10 +20,10 @@
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Current Market</a>
+                <a class="nav-link" href="/market">Current Market</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Portfolio</a>
+                <a class="nav-link" href="/portfolio">Portfolio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
