--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,45 @@
-{% extends "header.html" %}
-{% block content %}
-<body>
-    <h1>This is a test</h1>
-    <p>The test works as expected</p>
-    <img src="/static/images/200w.gif">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MarketMind</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
+</head>
+<body class="grad">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary white" id="about-header">
+        <div class="container-fluid">
+          <a class="navbar-brand" id="white" href="/">MarketMind</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse right" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" id="white" aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="white" href="/market">Current Market</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="white" href="/portfolio">Portfolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="white" href="/about">About</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div class="container main-block">
+        <div class="text-section">
+            <p class="left" id="white">First paragraph on the left side.</p>
+            <p class="left" id="white">Second paragraph on the left side.</p>
+        </div>
+        <div class="image-section">
+          <img src="/static/images/200w.gif">
+        </div>
+    </div>
 </body>
-{% endblock content %}
+</html>
