--- a/templates/market.html
+++ b/templates/market.html
@@ -33,7 +33,12 @@
           </div>
         </div>
     </nav>
-    <h1>This is a test</h1>
-    <p>This is the market page</p>
+
+    <div class="main-block">
+      <p class="left" id="black">enticing description 1</p>
+      <p class="left" id="black">enticing description 2</p>
+    </div>
+    
     <img src="/static/images/200w.gif">
 </body>
+</html>
