--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -33,7 +33,10 @@
           </div>
         </div>
     </nav>
-    <h1>This is a test</h1>
-    <p>User Portfolio</p>
+    <div class="main-block">
+      <p class="left" id="black">other enticing description 1</p>
+      <p class="left" id="black">other enticing description 2</p>
+    </div>
     <img src="/static/images/200w.gif">
 </body>
+</html>
