--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="grad">
     <nav class="navbar navbar-expand-lg bg-body-tertiary white" id="about-header">
-        <div class="container-fluid">
+        <div class="container-fluid no-left">
           <a class="navbar-brand" id="white" href="/">MarketMind</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -32,14 +32,19 @@
           </div>
         </div>
       </nav>
-      <div class="container main-block">
+      <div class="container-fluid flexbox main-block no-left">
         <div class="text-section">
-            <p class="left" id="white">First paragraph on the left side.</p>
-            <p class="left" id="white">Second paragraph on the left side.</p>
-        </div>
+            <p class="left" id="white">MarketMind  helps college students understand the stock market without having to lose money by using real-time market data and providing educational resources. Marketmind is specifically tailored to people that have no prior knowledge of the market or how to invest. We ensure you grasp essential concepts and build your financial confidence for your future.</p>
+            <p class="left" id="white">A key feature is its portfolio creation tool, allowing students to track companies without using money. This hands-on approach enhances understanding and prepares them for future investments, making MarketMind invaluable for aspiring investors.</p>
+            <div class="button">
+              <a href="/market" class="get-started-btn">Get Started</a>
+            </div>
+            
+          </div>
         <div class="image-section">
-          <img src="/static/images/200w.gif">
+          <img id="main-image" src="/static/images/graph.jpg">
         </div>
     </div>
+
 </body>
 </html>
