--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary" id="about-header">
-        <div class="container-fluid">
+        <div class="container-fluid no-left">
           <a class="navbar-brand" href="/">MarketMind</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
