--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,9 @@
                 <a class="nav-link" id="white" href="/portfolio">Portfolio</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" id="white" href="/resources">Learn More</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" id="white" href="/about">About</a>
               </li>
             </ul>
@@ -39,8 +42,7 @@
             <div class="button">
               <a href="/market" class="get-started-btn">Get Started</a>
             </div>
-            
-          </div>
+        </div>
         <div class="image-section">
           <img id="main-image" src="/static/images/graph.jpg">
         </div>
