--- a/templates/index.html
+++ b/templates/index.html
@@ -35,9 +35,9 @@
           </div>
         </div>
       </nav>
-      <div class="container-fluid flexbox main-block no-left">
-        <div class="text-section">
-            <p class="left" id="white">MarketMind  helps college students understand the stock market without having to lose money by using real-time market data and providing educational resources. Marketmind is specifically tailored to people that have no prior knowledge of the market or how to invest. We ensure you grasp essential concepts and build your financial confidence for your future.</p>
+      <div class="container-fluid flexbox main-block">
+        <div class="text-section center">
+            <p class="left" id="white">MarketMind helps college students understand the stock market without having to lose money by using real-time market data and providing educational resources. Marketmind is specifically tailored to people that have no prior knowledge of the market or how to invest. We ensure you grasp essential concepts and build your financial confidence for your future.</p>
             <p class="left" id="white">A key feature is its portfolio creation tool, allowing students to track companies without using money. This hands-on approach enhances understanding and prepares them for future investments, making MarketMind invaluable for aspiring investors.</p>
             <div class="button">
               <a href="/market" class="get-started-btn">Get Started</a>
