--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -27,6 +27,9 @@
                 <a class="nav-link" href="/portfolio">Portfolio</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="/resources">Learn More</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
               </li>
             </ul>
