--- a/templates/resources.html
+++ b/templates/resources.html
@@ -36,5 +36,26 @@
           </div>
         </div>
     </nav>
+
+      <!-- Resources Section -->
+      <div class="resources-container">
+        <h1>Resources</h1>
+        <div class="resource-item">
+            <iframe src="https://www.bankrate.com/investing/ultimate-guide-virtual-trading-stock-market-simulator/" class="resource-frame"></iframe>
+            <div class="resource-content-box">
+                <h2>Example Website</h2>
+            </div>
+        </div>
+        <div class="resource-item">
+            <iframe src="https://www.bankrate.com/investing/ultimate-guide-virtual-trading-stock-market-simulator/" class="resource-frame"></iframe>
+            <div class="resource-content-box">
+                <h2>Another Example Website</h2>
+            </div>
+        </div>
+        <!-- Add more resources as needed -->
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXlAH+b7ATyYkG0e3eM7OR7C7kxM/cB9cAOzz1sY7pDnhS3X9q6CfRjSQhlg" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGhoiN6q7VQFiF55f/FRZ6pOJpwhh0f4x0SqBiuIyiKOh7Rx00f6Efp/0Qp" crossorigin="anonymous"></script>
+    
 </body>
 </html>
