filling out market

--- a/templates/market.html
+++ b/templates/market.html
@@ -45,8 +45,8 @@
           <input type="text" id="searchInput" placeholder="Type to search" oninput="toggleClearButton(this)">
           <span class="icon clear" id="clearButton" onclick="clearInput()">❌</span>
         </div>
-        <div class="display-graph left">
-          <img src="/static/images/200w.gif">
+        <div class="display-graph center">
+          <img id="full" src="/static/images/200w.gif">
           <p class="footnote">placeholder image and placeholder text</p>
         </div>
       </div>
