--- a/static/main.css
+++ b/static/main.css
@@ -12,6 +12,29 @@ p {
     color: #666;
 }
 
+table {
+    border: 1px solid black;
+}
+
+tr {
+    border: 1px solid black;
+    padding: 4px;
+}
+
+th {
+    border: 1px solid black;
+    padding: 4px;
+}
+
+td {
+    border: 1px solid black;
+    padding: 4px;
+    white-space: nowrap;
+    
+}
+
+
+
 /* class selection */
 
 .navbar {
@@ -110,6 +133,8 @@ p {
 .flexbox {
     display: flex;
     align-items: flex-start;
+    justify-content: space-between;
+    gap: 10px;
     height: auto;
     padding: 20px;
 }
@@ -219,6 +244,18 @@ p {
     height: 300px; /* Changed line */
     border: none; /* Changed line */
     margin-bottom: 20px; /* Changed line */
+}
+
+.stock{
+    transition: background-color  0s; 
+    box-sizing: border-box;
+    color: black;
+}
+
+.stock:hover {
+    padding-right: 5px;
+    border-left: 5px solid black; /* Black, 5px solid border on hover */
+    background-color: #e0f7fa; /* Light blue color on hover */
 }
 
 /* id selection */
@@ -339,4 +376,19 @@ p {
 
 #full {
     width: 100%;
+}
+
+.no-right {
+    padding-right: 0px;
+    margin-right: 0px;
+}
+
+.symbol {
+    display: flex;
+    flex-direction: column;
+    gap: 0px; 
+}
+
+.no-bottom {
+    margin-bottom: 0px;
 }
