--- a/static/main.css
+++ b/static/main.css
@@ -395,3 +395,50 @@ td {
 .no-bottom {
     margin-bottom: 0px;
 }
+
+/* chatbot */
+
+.chatbot-container {
+    margin-top: 20px;
+    padding: 10px;
+    border-radius: 20px;
+    border: 1px solid #ccc;
+}
+
+#chat-container {
+    margin-top: 10px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    width: 300px;  /* Change this once you fix the backend*/
+}
+
+#chat-box {
+    max-height: 200px;
+    overflow-y: auto;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #fff;
+}
+
+.chat-form {
+    display: flex;
+    gap: 10px;
+}
+
+.user-message {
+    background-color: #e1f5fe;
+    padding: 5px;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+.ai-message {
+    background-color: #f1f8e9;
+    padding: 5px;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
