--- a/templates/resources.html
+++ b/templates/resources.html
@@ -68,6 +68,7 @@
         </form>
     </div>
 </div>
+    <!-- Chatbot Section -->
 <script>
 document.getElementById("chatbot-toggle").addEventListener("click", function() {
     var chatContainer = document.getElementById("chat-container");
