--- a/templates/market.html
+++ b/templates/market.html
@@ -37,6 +37,8 @@
         </div>
     </nav>
 
+
+<!-- search bar -->
     <div class="flexbox container-fluid main-block">
       <div class="text-section" id="full">
         <p class="left" id="black">What company would you like to see?</p>
@@ -50,6 +52,8 @@
           <p class="footnote">placeholder image and placeholder text</p>
         </div>
       </div>
+
+      <!-- table -->
       <div class="text-section no-right" id="full">
         <p> A table should go here that shows the users ticket search</p>
         <table>
