this project has upset me in ways I did not know were possible.

--- a/static/main.css
+++ b/static/main.css
@@ -442,3 +442,12 @@ td {
     border-radius: 5px;
     margin-bottom: 5px;
 }
+
+.block {
+    display: block;
+}
+
+.btn {
+    background-color: #42ABEF;
+    color: white;
+}
