refernced news in index

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,9 @@
                 <a class="nav-link" id="white" href="/resources">Learn More</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" id="white" href="/news">News</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" id="white" href="/about">About</a>
               </li>
             </ul>
