--- a/templates/news.html
+++ b/templates/news.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 </head>
+
 <body class="grad">
     <nav class="navbar navbar-expand-lg bg-body-tertiary white" id="about-header">
         <div class="container-fluid no-left">
@@ -32,7 +33,7 @@
                 <a class="nav-link" id="white" href="/resources">Learn More</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" id="white" href="/news">News</a>
+                <a class="nav-link" href="/news">News</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" id="white" href="/about">About</a>
