--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
           <div class="collapse navbar-collapse right" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" id="white" aria-current="page" href="/">Home</a>
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" id="white" href="/market">Current Market</a>
