--- a/templates/news.html
+++ b/templates/news.html
@@ -11,37 +11,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
 </head>
 
-<body class="grad">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary white" id="about-header">
-        <div class="container-fluid no-left">
-          <a class="market-mind-link" id="white" href="/">MarketMind</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse right" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" id="white" aria-current="page" href="/">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="white" href="/market">Current Market</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="white" href="/portfolio">Portfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="white" href="/resources">Learn More</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/news">News</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="white" href="/about">About</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-    </nav>
+<body class="grad-other">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary" id="about-header">
+    <div class="container-fluid no-left">
+      <a class="market-mind-link black" href="/">MarketMind</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse right" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="/market">Current Market</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/portfolio">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link page_indicator" href="/news">News</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/resources">Learn More</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about">About</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+</nav>
 
     <div class="container my-5 text-center">
         <h1>Company News Search</h1>
