--- a/templates/about.html
+++ b/templates/about.html
@@ -36,7 +36,7 @@
               <a class="nav-link" href="/resources">Learn More</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about">About</a>
+              <a class="nav-link page_indicator" href="/about">About</a>
             </li>
           </ul>
         </div>
