--- a/templates/market.html
+++ b/templates/market.html
@@ -21,10 +21,7 @@
           <div class="collapse navbar-collapse right" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/market">Current Market</a>
+                <a class="nav-link" id = "black" href="/market">Current Market</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/portfolio">Portfolio</a>
