--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -21,13 +21,10 @@
           <div class="collapse navbar-collapse right" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="/market">Current Market</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/portfolio">Portfolio</a>
+                <a class="nav-link page_indicator" href="/portfolio">Portfolio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/news">News</a>
