--- a/static/main.css
+++ b/static/main.css
@@ -150,6 +150,7 @@ td {
     /* font-size: 20px; */
     font-family: "Poppins";
     /* line-height: 20px; */
+}
 
 .right {
     text-align: right;
