--- a/templates/market.html
+++ b/templates/market.html
@@ -6,28 +6,25 @@
     <title>MarketMind</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet"> 
 </head>
-<body class="grad-other">
+<body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary" id="about-header">
         <div class="container-fluid no-left">
-          <a class="market-mind-link black" href="/">MarketMind</a>
+          <a class="navbar-brand" href="/">MarketMind</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse right" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" id = "black" href="/market">Current Market</a>
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/market">Current Market</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/portfolio">Portfolio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/news">News</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/resources">Learn More</a>
@@ -40,8 +37,6 @@
         </div>
     </nav>
 
-
-   
 
 
     <div class="flexbox container-fluid main-block">
@@ -61,11 +56,6 @@
             {% else %}
             <div class="input-container">
               {{ form.companyName(class="") }}
-              <!-- <datalist style="height:5.1em;overflow:hidden;">
-                {% for name, symbol in data%}
-                  <option lable ="{{name}}, {{symbol}}" value={{symbol}}></option>
-                {% endfor %}
-              </datalist> -->
               <div class="form-group button-group center">
                 {{ form.submit(id="input-button", class="btn") }}
               </div>
@@ -75,12 +65,7 @@
         </form>
 
         <div class="display-graph center">
-          {% if plot_html %}
-            <!-- <img id="full" src={{url}} alt="my plot"> -->
-            {{ plot_html | safe }}
-          {% else %}
-            <img id="full" src="../static/images/200w.gif" alt="my plot">
-          {% endif %}
+          <img id="full" src="/static/images/200w.gif">
           <p class="footnote">placeholder image and placeholder text</p>
         </div>
       </div>
@@ -99,11 +84,11 @@
           <tr class="stock">
             <td>
               <div class="symbol">
-                <p class="no-bottom"> {{ word }}</p>
-                <p class="no-bottom">NVIDIA CORPORATION COM</p>
+                <p class="no-bottom"> {{ ticket }}</p>
+                <p class="no-bottom"> {{ name }}</p>
               </div>
             </td>
-            <td>121.09</td>
+            <td>{{ value }}</td>
             <td>ticket Data</td>
             <td>ticket Data</td>
             <td>ticket Data</td>
@@ -111,6 +96,5 @@
         </table>
       </div>
     </div>  
-
 </body>
 </html>
