--- a/static/main.css
+++ b/static/main.css
@@ -149,7 +149,7 @@ td {
 .landingPageDesc {
     /* font-size: 20px; */
     font-family: "Poppins";
-    /* line-height: 20px; */
+    line-height: 20px;
 }
 
 .right {
