front-end changes

--- a/static/main.css
+++ b/static/main.css
@@ -376,10 +376,11 @@ td {
 .input-container {
     display: flex;
     align-items: center;
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
     border-radius: 4px;
-    padding: 5px;
+    /* padding: 5px; */
     width: auto;
+    margin-top: 10px;
 }
 
 .input-container input {
@@ -522,5 +523,9 @@ td {
 .btn {
     background-color: #42ABEF;
     color: white;
+    margin-left: 15px;
+    width: 100px;
 }
+
+
 
